# tacparser

./: .buildinfo  .gitignore  .gitmodules  LICENSE  MANIFEST.in  README.md  genindex.html  index.html  log.log.2021-02-04  make_docs.bat  make_expegparser.py  node.py  objects.inv  parsergenerator.py  py-modindex.html  reader.py  run_test.bat  sample.py  search.html  searchindex.js  setup.cfg  tacparser.html  tacparser.py
.doctrees/: environment.pickle  index.doctree  tacparser.doctree
_modules/: index.html
_modules/tacparser/: baseparser.html  exception.html  expegparser.html  node.html  parsergenerator.html  reader.html
_sources/: index.rst.txt  tacparser.rst.txt
_static/: documentation_options.js
app/: baseparser.py  expegparser.py  logging.conf
docs/: conf.py  tacparser.rst
expegfiles/: action.peg  antlrv4.peg  expeg.peg  expegparser.py  make_parser.py
html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  tacparser.html
html/.doctrees/: environment.pickle  index.doctree  tacparser.doctree
tacparser/: __init__.py  actionsparser.py  applyaction.py  astactions.py  baseparser.py  exception.py  expegparser.py  logging.conf  make_expegparser.py  make_parser.py  node.py  parsergenerator.py  reader.py
tacparser.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: logging.conf  test_actionsparser.py  test_astactions.py  test_exPegParser.py  test_loop.py  test_macro.py  test_parserGenerator.py  test_reader.py  test_recursion.py  test_reuseDef.py  test_unicode.py
(+127 files in other folders)
