[metadata]
name = tacparser
version = attr: tacparser.__version__
url = https://github.com/tackyto/tacparser
author = Toshifumi Takizawa
author_email = takizawat.0826@gmail.com
license_file = LICENSE
description = PEG Parser Generator
long_description = file: README.md

[options]
zip_safe = False
include_package_data = True
packages = find:
test_suite = tests
python_requires = >= 3.9
install_requires =
    regex

[options.entry_points]
console_scripts =
    tacparser-gen = tacparser.parsergenerator:main
